# document-intelligence-backend

./: .env.example  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 119b0817dace_add_documents_table.py  2e31fc8c19b0_added_default_role_to_users.py  3f286d4b1259_added_default_values_in_document.py  6c6f0ebf8dfa_add_role_to_users.py  7d62d56cc35c_fix_document_table_schema.py  af0204e9b0ee_create_users_table.py
app/: dependencies.py  main.py
app/api/v1/: router.py  schemas.py  websocket_manager.py
app/api/v1/routes/: auth.py  documents.py  tasks.py
app/application/use_case/: auth.py  get_task_status.py  process_document.py  upload_document.py
app/core/: limiter.py  security.py
app/domain/: exceptions.py
app/domain/services/: storage_interface.py
app/files/: 2675b507-dee7-4b66-bb23-3caebf034f5a  27aa01ed-fc0b-45bc-a289-0e13d6abb006-Company I Dataset Overview.docx  32dde13b-9283-4ec4-ab6e-1bed31c4d9cf-Final IWANEFUN BREAST CANCER CLASSIFICATION CHAPTER.docx  3670da41-1c42-47b4-81ae-0226ce66ed84  49ecc926-2cb8-44b4-9d42-a86bcb3e5994-ogunnowo.docx  94bb2fc7-397c-4a95-b59f-5ae7b6aad0d9-Feyi final.docx  edec8dfc-c09a-4fd6-a3c0-4401087f67ec-kolade final edit 2.docx
app/infrastructure/: config.py  logging.py
app/infrastructure/auth/: dependencies.py  jwt.py  password.py
app/infrastructure/db/: models.py  session.py  session_sync.py
app/infrastructure/processing/: processor_service.py
app/infrastructure/queue/: celery_app.py
app/infrastructure/storage/: local_storage.py  minio_service.py  r2_storage.py  s3.py
app/workers/: document_worker.py
minio-data/.minio.sys/: format.json
minio-data/document-bucket/12be5d24-2052-4036-b6f7-900c442558bb-kolade final edit 2.docx/919ac3d3-eedb-49ef-ac4a-72569ae669aa/: part.1
minio-data/document-bucket/165af25b-a514-47ef-bc51-16aec41e5abb-README.docx/226d4e62-2926-46c1-9986-98601ce6c015/: part.1
minio-data/document-bucket/2ccf5d25-8ee6-4254-976e-f15ca1aa8131-Telco Churn Report.pdf/42491c6c-3d60-473f-82fd-cd1ceb4e0dba/: part.1
minio-data/document-bucket/65e38b5b-e863-4551-8fbf-914e7cfc6d0c-ogunnowo.docx/af264a58-4a6d-4264-86ca-8ad14337217a/: part.1
minio-data/document-bucket/69ba2fe6-9028-4f49-a848-79cdb05578d4-Company I Dataset Overview.docx/12cef9fa-90c4-45e2-83f5-20bae9e5083b/: part.1
test/: test_document_lifecycle.py  test_infra.py  test_main.py  test_protected_routes.py
tests/: conftest.py  test_auth.py  test_documents.py
tests/fakes/: fake_storage.py
